--- a/src/index.css
+++ b/src/index.css
@@ -59,3 +59,18 @@ img {
   max-width: 100%;
   height: auto;
 }
+
+/* ========= React modal transitions ========= */
+
+.ReactModal__Overlay {
+  opacity: 0;
+  transition: opacity 200ms ease-in-out;
+}
+
+.ReactModal__Overlay--after-open {
+  opacity: 1;
+}
+
+.ReactModal__Overlay--before-close {
+  opacity: 0;
+}
